# ferrum_oxidize

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: error.rs  lib.rs  punctuated.rs  span.rs  target.rs
src/analysis/: mod.rs
src/cargo/: error.rs  mod.rs  project.rs
src/config/: error.rs  mod.rs
src/generator/: error.rs  mod.rs
src/generator/cargo/: mod.rs
src/generator/codegen/: expr.rs  fn_def.rs  mod.rs  stmt.rs  type.rs
src/lexer/: error.rs  mod.rs  token.rs
src/lexer/token/: keyword.rs  literal.rs  mod.rs  primitive.rs  token_type.rs
src/parser/: error.rs  fill_scope.rs  mod.rs
src/parser/ast/: fn_def.rs  generic.rs  generics.rs  item.rs  mod.rs  scope.rs  type.rs  use.rs
src/parser/ast/statement/: assign.rs  decl.rs  do.rs  mod.rs
src/parser/ast/statement/expr/: fn_call.rs  ident_lookup.rs  literal.rs  mod.rs  static_access.rs
src/parser/parse/: expr.rs  fn_def.rs  mod.rs  stmt.rs  type.rs  use.rs
src/translator/: ast.rs  error.rs  mod.rs  prep.rs  runtime.rs
src/translator/ast/: expr.rs  fn_def.rs  mod.rs  stmt.rs  type.rs  use.rs
src/translator/translate/: expr.rs  fn_def.rs  mod.rs  stmt.rs  type.rs
