[package]
name = "ferrum_oxidize"
description = "Compiler library for the Ferrum programming language."
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
syn = { version = "1.0.99", features = ["full", "printing", "extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"

[build-dependencies]
rust_source_bundler = { git = "https://github.com/adam-bates/rust_source_bundler" }
anyhow = "1.0"

