[package]
name = "ferrum_oxidize"
description = "Compiler library for the Ferrum programming language."
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
syn = { version = "1.0.99", features = ["full", "printing", "extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"
target-lexicon = "0.12.4"
ferrum_runtime = { path = "./ferrum_runtime" }

[build-dependencies]
rust_source_bundler = "0.2.2"
anyhow = "1.0"

